--- a/index.html
+++ b/index.html
@@ -17,14 +17,23 @@
                 <label for="firstname">Your First Name
                     <span class="required-field">*</span>
                 </label>
-                <input type="text" id="firstname" name="firstname" required>
-                <label for="lastname">Your Last Name</label>
-                <input type="text" id="lastname" name="lastname" required>
+                <input type="text" id="firstname" name="firstname" minlength="2" maxlength="35" required>
+                <label for="lastname">Your Last Name
+                    <span class="required-field">*</span>
+                </label>
+                <input type="text" id="lastname" name="lastname" minlength="2" maxlength="35" required>
             </div>
+            <fieldset>
+                <label for="age">Your Age</label>
+                <input type="number" name="age" id="age" min="21" max="120">
+                <h5>Disclaimer: This contest is only for those age 21 and older</h5>
+            </fieldset>
             <fieldset>
                 <legend>Your Contact Info</legend>
                 <div>
-                    <label for="email">Your Email</label>
+                    <label for="email">Your Email
+                        <span class="required-field">*</span>
+                    </label>
                     <input type="email" id="email" name="email">
                 </div>
                 <div>
@@ -88,7 +97,7 @@
                         <option value="WY">Wyoming</option>
                     </datalist>
                     <label for="zip">Your Zipcode</label>
-                    <input type="text" id="zip" name="zip">
+                    <input type="text" id="zip" name="zip" pattern="[0-9]{5}" title="5-Digit US ZIP Code">
                 </div>
             </fieldset>
 
