added all codes

--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
                         <option value="WV">West Virginia</option>
                         <option value="WY">Wyoming</option>
                     </datalist>
+                </div>
+                    <div>
                     <label for="zip">Your Zipcode</label>
                     <input type="text" id="zip" name="zip" pattern="[0-9]{5}" title="5-Digit US ZIP Code">
                 </div>
